Updated the api dockerfile

--- a/API/dockerfile
+++ b/API/dockerfile
@@ -32,4 +32,4 @@ RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
 EXPOSE 4389
 
 # Start PHP-FPM server
-CMD ["php-fpm"]
+CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=4389"]
